Update on Overleaf.

--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -2,8 +2,8 @@
   pdfauthor = {
 % EMEP/MSC-W
 %MUST BE CHANGED
-    H. Fagerli, S. Tsyro, E. Grøtting Wærsted, 
-    \'A. Ny\'{\i}ri, D. Simpson, P. Wind, 
+    H. Fagerli, S. Tsyro, E. Gr{{\o}tting W{\ae}}rsted, 
+  {\'A}. Ny{\'\i}ri, D. Simpson, P. Wind, 
     A. Benedictow, H. Klein, H. Brenna,
     A. Mortier, Jan Griesfeller
 % EMEP/CCC
@@ -19,7 +19,6 @@
 % TNO
    J.P. Kuenen
 %   H. A.C. Denier van der Gon, J. J.P. Kuenen, A. %J.H. Visschedijk
-
 },
   pdftitle = {EMEP Status Report 1/2021},
   pdfsubject = {Transboundary Air Pollution},
@@ -48,33 +47,29 @@ Date: \today\\
 
 \vspace{2cm}
 {
-\old{TODO}
+%\old{TODO}
   \begin{tabular}{m{4.0cm}m{9.5cm}}
     EMEP/MSC-W: &
-    \mbox{Hilde Fagerli, Svetlana Tsyro, Eivind Grøtting Wærsted}
-    \mbox{\'Agnes Ny\'{\i}ri, David Simpson, Peter Wind,}
+    \mbox{Hilde Fagerli, Svetlana Tsyro, Eivind Gr{\o}tting W{\ae}rsted}
+    \mbox{{\'A}gnes Ny{\'\i}ri, David Simpson, Peter Wind,}
     \mbox{Anna Benedictow, Heiko Klein, Hans Brenna,}
     \mbox{Augustin Mortier, Jan Griesfeller}\\
-\\
+ & \\
     EMEP/CCC: &
     \mbox{Wenche Aas, Anne Hjellbrekke, Sverre Solberg,}
     \mbox{ Kjetil T{\o}rseth, Karl Espen Yttri}\\
-\\
+ & \\
     EMEP/CEIP: &
     \mbox{Katarina Mareckova, Bradley Matthews,}
     \mbox{Sabine Schindlbacher, Bernhard Ullrich,}
-    \mbox{Robert Wankm\"uller}\\
+    \mbox{Robert Wankm{\"u}ller}\\
 \\
     CCE/UBA: & \mbox{Thomas Scheuschner}\\
-%NOT 2021\\
-%NOT 2021    Chalmers/SMHI: & \mbox{Robert Bergstr{\"o}m}\\
-\\    
+ & \\    
     TNO: &
     \mbox{Jeroen J.P. Kuenen,}
 %    \mbox{Antoon J.H. Visschedijk}\\ 
-\\
-
-
+% & \\
   \end{tabular}
 
 }
