--- a/acknow.tex
+++ b/acknow.tex
@@ -27,7 +27,9 @@ in particular the Contracts on emissions (CAMS\_81) and policy products
 
 The work presented in this report has benefited largely from the work carried out under the four EMEP Task Forces and in particular under TFMM.\\
 
-A large number of co-workers in participating countries have contributed in submitting quality assured data. The EMEP centers would like to express their gratitude for continued good co-operation and effort. The institutes and persons providing data are listed in the EMEP/CCC's data report and identified together with the data sets in the EBAS database. \\
+A large number of co-workers in participating countries have contributed in submitting quality assured data. The EMEP centers would like to express their gratitude for continued good co-operation and effort. The institutes and persons providing data are listed in the EMEP/CCC's data report and identified together with the data sets in the EBAS database.
+
+For the work presented on trends in EC/OC and chemical compostion we would like to express our gratitude to \\
 
 For developing standardized methods, harmonization of measurements and improving the reporting guidelines and tools, the close co-operations with participants in the European Research Infrastructure for the observation of Aerosol, Clouds, and Trace gases (ACTRIS) as well as with the Scientific Advisory Groups (SAGs) in WMO/GAW are especially appreciated. \\
 
