--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -11,9 +11,7 @@ list of questions was given to the subsidiary bodies of the Air Convention. Seve
 
 In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO Air Quality Guidelines (AQG) values for PM$_{2.5}$ and PM$_{10}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5th year since 2000).
 
-Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons are the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring. 
-\SKIP{The lumped VOCs in the model could not be compared directly with measured species.}
-The topic of VOC trends will be investigated in more detail in the near future. 
+Comparison of trends in measured and modelled VOCs is not included in this report. The main reasons are the lack of established procedures for doing such a comparison as well as the lack of proper monitoring sites with sufficient data capture and sufficient homogeneity in the monitoring during the 2000-2019 period. The topic of VOC trends will be investigated in more detail in the near future. 
 
 Unfortunately, the EMEP observational network is dominated by sites in the western part of the EMEP domain and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in chapter \ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part. Note, however, that the uncertainties related to emissions and their trends in the eastern countries are large (see chapter~\ref{ch:emis2019}).
 
@@ -257,37 +255,36 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 \end{table}
 
 
-\SKIP{DAVE'S MARKER. GOT TO HERE......}
 
 \clearpage
 \section{\label{sec:Trends_oxidised_nitrogen }Trends in oxidised nitrogen}
 
-During the last decades, the total emissions of NO$_x$ declined significantly in Europe, followed by declining nitrogen dioxide concentrations, total nitrate (nitric acid plus particulate nitrate) in air and oxidized nitrogen wet deposition at EMEP background sites. This is found both for the EMEP MSC-W model calculations and for observations. Similar results have been presented in \citet{Theobald2019} for wet deposition of oxidized nitrogen for the 1990-2010 period and in \citet{Banzhaf2015} for total nitrate for 1990-2009. \citet{torseth2012} also find decreasing trends in nitrogen dioxide, total nitrate and nitrate in precipitations 1990-2009 in EMEP observations. A more recent study, analyzing the period 2000-2017 \citep{Colette2021} and including Airbase and most EMEP observations, also find decreasing trends in nitrogen dioxide.
+During the last decades, the total emissions of NO$_x$ have declined significantly in Europe, leading to reductions in \ce{NO2} concentrations, total nitrate (nitric acid plus particulate nitrate) in air and oxidized nitrogen wet deposition at EMEP background sites. This is found both for the EMEP MSC-W model calculations and for observations. Similar results have been presented in \citet{Theobald2019} for wet deposition of oxidized nitrogen for the 1990--2010 period and in \citet{Banzhaf2015} for total nitrate for 1990--2009. \citet{torseth2012} also find decreasing trends in nitrogen dioxide, total nitrate and nitrate in precipitations 1990--2009 in EMEP observations. A more recent study, analyzing the period 2000--2017 \citep{Colette2021} and including Airbase and most EMEP observations, also find decreasing trends in \ce{NO2}.
 
 Figure~\ref{fig:NOx_trends} shows an overview of the annual and seasonal trends in oxidised nitrogen compounds from 2000 to 2019. Tables~\ref{tab:no2_stat} to \ref{tab:no3dep_stat} show absolute and relative changes in the different oxidized nitrogen compounds.
 
-From 2000-2019, the reductions have been on average -1.2\% yr$^{-1}$ for nitrogen dioxide concentrations at EMEP background sites (total -24\%). As NO$_2$ has a short lifetime, the trend in NO$_2$ is expected to reflect the trend in (local) emissions of NOx. During the 2000-2019 period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries), where the dominant part of the long term EMEP observations are situated, decreased by -48\%. EMEP/MSC-W model calculations follows the reported emission reductions closely (average reductions of -2.2\% yr$^{-1}$, or in total -42\% ). 
-The agreement between the trends calculated from observations and from the model (and emissions) agree well for the last period (2010-2019), with trends around -2.6\% yr$^{-1}$, whilst the trend in the first period is substantially lower in the observations than in the model calculations (and emissions). From Figure~\ref{fig:NOx_trends} it can be seen that the agreement between observations and model calculations is excellent until around 2008, but that in the year 2009 and onwards the model (and emissions) is shifted down relative to the observations. Similar results have been found in \citep{Colette2021}.
+From 2000--2019, the reductions have been on average -1.2\%~yr$^{-1}$ for \ce{NO2} concentrations at EMEP background sites (total -24\%). As NO$_2$ has a short lifetime, the trend in NO$_2$ is expected to reflect the trend in (local) emissions of NOx. During the 2000--2019 period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries), where the dominant part of the long term EMEP observations are situated, decreased by -48\%. EMEP/MSC-W model calculations follows the reported emission reductions closely (average reductions of -2.2\%~yr$^{-1}$, or in total -42\%). 
+The agreement between the trends calculated from observations and from the model (and emissions) agree well for the last period (2010--2019), with trends around -2.6\% yr$^{-1}$, whilst the trend in the first period is substantially lower in the observations than in the model calculations (and emissions). From Figure~\ref{fig:NOx_trends} it can be seen that the agreement between observations and model calculations is excellent until around 2008, but that in the year 2009 and onwards the model (and emissions) is shifted down relative to the observations. Similar results have been found in \citep{Colette2021}.
 
-
-
-
-The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NO$_x$) for the 2000-2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.3 \% yr$^{-1}$ (total of -45\%), close to the trends in emissions from the western EMEP domain (-48\%). %The difference between the trend in observations are largest during the first period, similar to the results for NO$_2$.
+The trends in wet deposition of oxidized nitrogen reflect changes in long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and are less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NO$_x$) for the 2000--2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.3 \% yr$^{-1}$ (total of -45\%), close to the trends in emissions from the western EMEP domain (-48\%). %The difference between the trend in observations are largest during the first period, similar to the results for NO$_2$.
 However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are then shifted downward and in good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods are small, and thus the results encumbered with more uncertainty.
 
-For particulate nitrate, nitric acid and their sum the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements is worse. 
+
+For particulate nitrate, nitric acid and their sum, the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements is worse. 
 
 The modelled trends for 2000 to 2019 are all around -2 to -2.5\% per year for particulate nitrate, nitric acid and their sum - aligned with the results of NO$_2$, wet deposition of oxidized nitrogen and the emissions. The observations show a somewhat smaller negative trend of around -1.6\% yr$^{-1}$ for the sum and around -2\% yr$^{-1}$ both for particulate nitrate and nitric acid. For the shorter periods, the number of sites with significant trends are very small, both in the model calculations and the observations, and thus the results more uncertain.
-However, for all the three observations, the trend in the first period (2000-2010) is smaller than the trend in the second period, whilst the model show a rather similar trend for the sum, and larger trends in the first period for the separate components.
+However, for all the three observations, the trend in the first period (2000--2010) is smaller than the trend in the second period, whilst the model show a rather similar trend for the sum, and larger trends in the first period for the separate components.
+
 
 In Figure~\ref{fig:OXNtrends}, the trends for the individual sites are visualized on a map on top of the EMEP MSC-W model calculations. For NO$_2$ and wet deposition of oxidized nitrogen, the trends in the observations on the eastern part of the domain are smaller and to a larger extent non significant, whilst the trends in the EMEP MSC-W model calculations are in general larger and more often significant. The reasons for these discrepancies are not clear, but could be related to problems/inaccuracies in emission reporting and their trends, processes that are not (well enough) taken into account or in the observations themselves.
 
 In summary we find that oxidized nitrogen in air and precipitation has been decreasing since 2000. However, the decrease in the observations (-24\% for \noii and -26\% for wet deposition of oxidized nitrogen) are smaller than in model calculations (-42\% for \noii and -45\% for wet deposition of oxidized nitrogen) and emissions (-48\% for EU27+UK+EFTA). 
 
+
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/Nox_trends.png}
-	\caption{\label{fig:NOx_trends}Trends in oxidised nitrogen compounds from 2010-2019 for EMEP observations and model. The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in NOx emission is indicated in the plot of \noii with secondary y-axes}
+	\caption{\label{fig:NOx_trends}Trends in oxidised nitrogen compounds from 2010--2019 for EMEP observations and model. The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50th, 25th, 75th percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in NOx emission is indicated in the plot of \noii with secondary y-axes}
 \end{figure}
 
 \begin{figure}[h]
@@ -432,20 +429,24 @@ mod. & conf.interval & obs. & conf.interval & mod. & conf.interval \\
 
 
 \section{\label{sec:Trends_reduced nitrogen }Trends in reduced nitrogen}
+
 Ammonia emissions from agricultural activities have been only slightly reduced for the western EMEP domain since 2000 (-12\% in EU27+UK+EFTA countries). In the EMEP domain as a whole, ammonia emissions have increased by 12\% since 2000 (see chapter \ref{ch:emis2019}).
 
-With such small changes in emissions, clearly it is very difficult to detect any trends in the observations - considering also that the meteorological variability introduces year to year changes of the same magnitude as the expected trends.
-Note that previous studies (e.g. \cite{torseth2012} and \cite{Theobald2019}) have found decreasing trends for reduced nitrogen. However, those studies analyzed earlier periods (e.g. 1980-2009 or 1990-2009), where the reported ammonia emissions decreased more.
+With such small changes in emissions, clearly it is very difficult to detect any trends in the observations -- considering also that the meteorological variability introduces year to year changes of the same magnitude as the expected trends.
+Note that previous studies  \citep[e.g.][]{torseth2012,Theobald2019} have found decreasing trends for reduced nitrogen. However, those studies analyzed earlier periods (e.g. 1980--2009 or 1990--2009), where the reported ammonia emissions decreased more.
 
 Figure~\ref{fig:Nred_trends} shows an overview of the annual and seasonal trends in reduced nitrogen compounds from 2000 to 2019. Figure~\ref{fig:RDNtrends} visualizes the trends in different reduced nitrogen compounds from observations on top of modelled trends on a European map. Tables~\ref{tab:tnh4_stat} to \ref{tab:nh4dep_stat} show absolute and relative changes in the different reduced nitrogen compounds.
 
-Indeed, both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen. Out of 44 sites with long term measurements at EMEP background sites, only 13 (9) are significant for the observations (model). The average change in the observations for 2000 to 2019 is -0.31\% yr$^{-1}$, with a confidence interval from -0.99\% yr$^{-1}$ to +0.37\% yr$^{-1}$, while the model show an average trend of -0.4\% yr$^{-1}$ and a confidence interval of -0.7\% yr$^{-1}$ to -0.1\% yr$^{-1}$. For the shorter time periods (2000-2010 and 2010-2019) there are even fewer sites with significant trends (see Table~\ref{tab:nh4dep_stat}).
 
-Total ammonium (NH$_3$ + NH$_4$) in air show larger negative changes in observations (model) of about -1.45\% yr$^{-1}$ (-1.36\% yr$^{-1}$) and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% (26\%) in observations (model calculations) for 2000-2019.
+Indeed, both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen. Out of 44 sites with long term measurements at EMEP background sites, only 13 are significant for the observations and 9 for the model. The average change in the observations for 2000 to 2019 is -0.31\% yr$^{-1}$, with a confidence interval from -0.99\% yr$^{-1}$ to +0.37\% yr$^{-1}$, while the model show an average trend of -0.4\% yr$^{-1}$ and a confidence interval of -0.7\% yr$^{-1}$ to -0.1\% yr$^{-1}$. For the shorter time periods (2000--2010 and 2010--2019) there are even fewer sites with significant trends (see Table~\ref{tab:nh4dep_stat}).
 
-The trend for ammonium aerosols is even more negative, -2.61 \% yr$^{-1}$ both in observations and model calculations, respectively.
+Total ammonium (NH$_3$ + NH$_4$) in air show larger negative changes in observations of about -1.45\% yr$^{-1}$, and for the model -1.36\% yr$^{-1}$, and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% in observations and 26\% in model calculations for 2000--2019.
+
+The trend for ammonium aerosols is even more negative, -2.61 \% yr$^{-1}$, both in observations and model calculations.
 
 Very few sites have long term time series of ammonia in air (8 sites), and very few of the trends calculated are significant. However, on average, the changes observed and calculated are positive: +1.55 and +1.54 \% yr$^{-1}$ in observations and model calculations, respectively, with all values within the confidence interval being positive.
+
+\SKIP{DAVE'S MARKER. GOT TO HERE......}
 
 This large difference between the trends of the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. When ammonia is released into the air, it reacts with secondary sulphate originating from the SO$_x$ emissions and forms particulate ammonium sulphates. If more ammonia is available, it reacts with nitric acid in an equilibrium reaction to form particulate ammonium nitrate. During the years from 2000 onwards, large reductions in SO$_x$ and NO$_x$ emissions have taken place, and thus less sulphate and nitric acid is available for forming ammonium particles. Therefore, a smaller fraction of NH$_3$ is converted to aerosol ammonium, and the decrease in particulate ammonium is strongly linked to the decrease in sulphate and nitrate. It is therefore to be expected that the trend in ammonium aerosol (-2.6\% yr$^{-1}$, observations) lies somewhere between the trend in particulate sulphate (-3.2\% yr$^{-1}$, observations) and nitrate (-2.0\% yr$^{-1}$, observations). 
 
@@ -1063,70 +1064,22 @@ all sites. The influence of OC from natural sources likely has a profound
 impact on the general lack of decrease observed for the OC fraction of
 \pmfine. These observations points to a continuous change in the aerosol
 chemical composition and in the relative source composition across
-Europe. The carbonaceous fraction appears particularly important for a
-further reduction in the observed \pmfine mass concentration in Europe,
-although effort is needed to separate its natural and anthropogenic
-fraction to get a quantitative overview of the abatable fractions.
-\\
-\bigskip
-
-
-\SKIP{ % COMMENT{\bigskip ORIG TEXT, DELETE if above is okay:\\}
-
-A -4.5$\pm$1.6~\%/yr reduction in EC was calculated across Europe for
-2010--2019 and the reduction was particularly consistent amongst the
-sites where the reduction was statistically significant. The model
-predicted a reduction that was somewhat lower (-3.9~\%/yr) than the
-observations, but still comparable. A similar reduction in EC (-4.2~\%/yr)
-was calculated for 2010--2019 as for 2001--2018 at the Birkenes
-Observatory in southern Norway. This consistent reduction indicates a
-potential for further reduction in future years for Europe in general,
-as LRT from continental Europe explains most EC from both fossil fuel
-and biomass burning sources at the Birkenes Observatory. A  -5.2~\%/yr
-reduction in levoglucosan at the Birkenes Observatory (2010--2019)
- indicate that EC from wood burning in Europe is declining equally
-rapid as that of EC from fossil fuel sources.
-
-The reduction in OC (-2.4$\pm$1.6~\%/yr) was less pronounced than for EC,
-whereas winter-time levels (-4.2~\%/yr) were comparable to EC. Non-abatable
-natural sources of OC peak in the growing season diluting anthropogenic
-sources, thus, anthropogenic OC emissions are likely best represented by
-winter-time data. Comparable reductions in winter-time OC (-4.1~\%/yr),
-winter-time EC (-6.4~\%/yr) and winter-time levoglucosan (-4.6~\%/yr)
-at the Birkenes Observatory suggest that abatement of residential
-wood burning emissions has been quite effective for Europe in general,
-taking into account considerations about the length of the time series
-and Birkenes as an indicator of European emissions.
-
-The model calculated a reduction in OC of -0.6~\%/yr, being noticeable
-less than for the observations (-2.4~\%/yr). A similar underprediction
-was seen for each season, thereby reproducing the seasonality in trend
-seen for the observations.
-
-The EC fraction of \pmfine decreased at all
-sites (-2.4$\pm$1.1~\%/yr), and at a level equal to, or higher than, the \ce{SO4^2-} fraction. The
-change in OC fraction was more scattered with a substantial and
-consistent 4.5~\%/yr increase at the northernmost sites, whereas
-there was no increase or decrease (0.2$\pm$2.8~\%/yr) when considering
-all sites. Influence of OC from natural sources likely has a profound
-impact on the general lack of decrease observed for the OC fraction of
-\pmfine. These observations points to a continuous change in the aerosol
-chemical composition and in the relative source composition across
-Europe. The carbonaceous fraction appears particularly important for a
-further reduction in the observed \pmfine mass concentration in Europe,
-although effort is needed to separate its natural and anthropogenic
-fraction to get a quantitative overview of the abatable fractions.\\
-}
-
-
-\SKIP{ % Now moved to ExecSummary
-For EC and OC we have calculated observed and modelled trends for 15 sites across Europe for the period 2010--2019. A reduction (of ca. 4.5~\%/yr) in observed EC was found, and a similar reduction was found for OC in the winter months (when OC is expected to be most sensitive to primary anthropogenic emissions rather than to OA associated with biogenic sources). These trends suggest that abatement measures are having some success in reducing both EC and OC in Europe, especially in wintertime.  The model reproduced modelled EC values and trends quite well, but underpredicted OC, both in terms of absolute values and trends. This underprediction is at least partly due to the omission of condensable organics in the reported emissions from many countries. 
-%
+Europe. It is clear that organic aerosol comprises a major fraction of \pmfine, but major efforts are needed to separate and understand its natural and anthropogenic components, in order to get a quantitative overview of the abatable fractions.
+\SKIP{
 The carbonaceous fraction appears particularly important for a
 further reduction in the observed \pmfine mass concentration in Europe,
 although effort is needed to separate its natural and anthropogenic
 fraction to get a quantitative overview of the abatable fractions.
-}
+} % END SKIP
+\\
+\bigskip
+
+
+
+
+
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
@@ -1282,7 +1235,7 @@ Figure \ref{fig:O3_boxplot} shows the calculated Sen's slopes for these six perc
 
 For both the observed and modelled data the trends show an increase in the 10th percentile and with a gradually stronger decrease in the higher percentiles. This is as expected when the emission of precursors (NOx) is reduced with time. The increase in the 10th percentile is explained by reduced titration by NOx while the the decreasing trend in the highest percentiles is explained by reduced photochemical formation of ozone in summer. The net result of these trends is a narrowing of the distribution of O$_3$ concentrations. 
 
-Figure \ref{fig:O3_boxplot} shows the trends in annual percentles for sites north and south of 49\degrees N. In general the agreement is rather good, with the model agreeing very well with the observations for the high percentiles for stations N of 49\degrees, though overestimating somewhat the decrease of the high percentiles (95-99) for stations south of 49\degrees N. This is an important finding since these percentiles are the main indicators for surface ozone pollution events. Figure \ref{fig:O3_boxplot} furthermore shows that the spread in the observed data is significantly larger than the spread in modelled data which is as expected. A grid model will inevitably reduce local geographical differences and produce smoothed concentrations fields. 
+Figure \ref{fig:O3_boxplot} shows the trends in annual percentiles for sites north and south of 49\degrees N. In general the agreement is rather good, with the model agreeing very well with the observations for the high percentiles for stations N of 49\degrees, though overestimating somewhat the decrease of the high percentiles (95-99) for stations south of 49\degrees N. This is an important finding since these percentiles are the main indicators for surface ozone pollution events. Figure \ref{fig:O3_boxplot} furthermore shows that the spread in the observed data is significantly larger than the spread in modelled data which is as expected. A grid model will inevitably reduce local geographical differences and produce smoothed concentrations fields. 
 
 For the 10th percentile, the model overestimates the increase both north and south of \mbox{49\degrees~N}. It is not obvious what this overestimation is due to. It could reflect that NOx in winter is not reduced as much as the emissions and model assume, or it could e.g. reflect deficiencies in the model description of atmospheric vertical stability and exchange of pollutants in winter. A possible underprediction of European NOx emissions was suggested as a likely cause of model underprediction of peak ozone and over prediction of low ozone by \citet{Oikonomakis2018}.
 
